feat: wire U and D into CommandInterpreter as vertical rotation commands and restrict movement to F/B only and fix blocked-move scenario to ensure only F/B contribute to blockedMoves