@@ -7,43 +7,54 @@ import java.util.function.Consumer;
 
 public class CommandInterpreter {
 
-    private static final Map<Character, Consumer<Probe>> EXECUTORS;
-    private static final Set<Character> MOVE_CMDS = new HashSet<>(Arrays.asList('F', 'B', 'U', 'D'));
+    // ---- Only F/B are movement commands now ----
+    private static final Set<Character> MOVE_CMDS = Set.of('F', 'B');
 
+    // ---- Mapping commands to Probe actions ----
+    private static final Map<Character, Consumer<Probe>> EXECUTORS;
     static {
-        Map<Character, Consumer<Probe>> m = new HashMap<>();
-        // Movement
-        m.put('F', Probe::moveForward);
-        m.put('B', Probe::moveBackward);
-        m.put('U', Probe::moveUp);
-        m.put('D', Probe::moveDown);
-        // Turns
-        m.put('L', Probe::turnLeft);
-        m.put('R', Probe::turnRight);
-        EXECUTORS = Collections.unmodifiableMap(m);
+
+        // MOVEMENT COMMANDS
+
+        EXECUTORS = Map.of('F', Probe::moveForward, 'B', Probe::moveBackward,
+
+                // VERTICAL ROTATION COMMANDS
+                'U', Probe::turnUp, 'D', Probe::turnDown,
+
+                // HORIZONTAL ROTATION COMMANDS
+                'L', Probe::turnLeft, 'R', Probe::turnRight);
     }
 
     public ExecutionResult execute(List<String> commands, Probe probe) {
-        final List<String> cmds = (commands == null) ? Collections.emptyList() : commands;
-        final List<InvalidCommand> invalids = new ArrayList<>();
+
+        List<String> cmds = (commands == null) ? Collections.emptyList() : commands;
+        List<InvalidCommand> invalids = new ArrayList<>();
+
         int blocked = 0;
 
         for (int i = 0; i < cmds.size(); i++) {
             String token = cmds.get(i);
+
             if (token == null || token.length() != 1) {
                 invalids.add(new InvalidCommand(i, token, "UNKNOWN_COMMAND"));
                 continue;
             }
+
             char c = Character.toUpperCase(token.charAt(0));
             Consumer<Probe> action = EXECUTORS.get(c);
+
             if (action == null) {
                 invalids.add(new InvalidCommand(i, token, "UNKNOWN_COMMAND"));
                 continue;
             }
+
+            // Movement commands (F and B)
             if (MOVE_CMDS.contains(c)) {
                 blocked += tryMove(probe, action);
-            } else {
-                action.accept(probe); // turn commands never blocked
+            }
+            else {
+                // Rotation commands (L, R, U, D)
+                action.accept(probe);
             }
         }
 
@@ -51,13 +62,14 @@ public class CommandInterpreter {
         return new ExecutionResult(total, total, blocked, invalids);
     }
 
-
     private int tryMove(Probe probe, Consumer<Probe> move) {
-        final int bx = probe.getX(), by = probe.getY(), bz = probe.getZ();
-        move.accept(probe);
-        final int ax = probe.getX(), ay = probe.getY(), az = probe.getZ();
-        // Success if any coordinate changed; otherwise blocked
-        return (bx != ax || by != ay || bz != az) ? 0 : 1;
-    }
+        int bx = probe.getX();
+        int by = probe.getY();
+        int bz = probe.getZ();
 
+        move.accept(probe);
+
+        // Check if probe moved
+        return (bx != probe.getX() || by != probe.getY() || bz != probe.getZ()) ? 0 : 1;
+    }
 }
